# poddle-axum

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  deploy.md  observability.md
crates/factory/: Cargo.toml
crates/factory/src/: error.rs  lib.rs
crates/factory/src/factories/: amqp.rs  database.rs  kafka.rs  kubernetes.rs  mod.rs  observability.rs  postgres.rs  redis.rs  tls.rs  zepto.rs
rust/: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  deploy.md
rust/.sqlx/: query-01a1183089d131625a2e9836ac07ed18d93bad305f3bd9f99cd78d89863ac8e8.json  query-05ce1b2d1889922f93282458c149940d982852cc4bb08bceafa3f461c10809b0.json  query-0b3b28c560164c8d4becaadef3a8392d674eebd63eca74cd3916224f25b7a095.json  query-0c4f51568cc8713b3e1463620506be8e3eec41f00946806a6c27c69d7a4e63d1.json  query-0e9a60bc50f2773e5d2282540a65fb207287a63ef069d30020571a3e7e7e6f51.json  query-1ad74958ef0fffba5f5586ba0685f982c6a2b417ebfc310e0413a143f6578b57.json  query-1ae014c48cea27941e8c836da1a03966af8deca33943f28fd2a7dad0c3b7e4fe.json  query-21882deeb5d37107d44b4aa94b9d5864fa3c23a3d05a6ccb3350e884ff3db139.json  query-2264899e7834a2c40e98b9cedfe7ffba89d7e86b7c79922dc46af7dab24488a9.json  query-243406ee3cb4f39a24962b3d574104c7c427295ffe43e364203c295b2dcdcfc8.json  query-24bfff856dff84450804a2409258a31d1b30c91987a2df3145770b3aa5df9bf6.json  query-251931178871f167d832992599ae3732270bbfc2a5d52bdd2b7a5b91f95fa4cc.json  query-276f8d4efd16707ee8d993575b743b7711e2069a7e07e63f229a063a29789251.json  query-2be5db8cbcc05ee7690b45e05b6a1cef1736c78bf4f075bc08fcd52f6084d6e7.json  query-34789a9e4aee7984ce613d2c4bfcd23f8fc942cd7084dcf5677585b2456c8bc8.json  query-3b84eb54d6dcc05e315082010fed343416686d592db3231dbc749b1ab50ca77c.json  query-429a3a5fca0062e0ae106d5c1f8f16258efc7d494180294add89d5a306d17792.json  query-4af05c1e5eceb7ceb89646eec0a3e1c7cd4956f64f8faa34106585d76ce56267.json  query-4b2ab28dd41fddfbbd265db779078601d9cb2bde5d46b44c26d3aa07fd9a91a2.json  query-4c47df0a6a10218e51f3f624775fd5ba4772a2e9d37d8adb50c2a5d53b22f62a.json  query-4c86c1cf735ba27a4ee295d535881fe2e9401e272cec0efb4c02e5fe927c5da8.json  query-5488c53e4ec1fc8594f6569d506ac22ae7d6bf1d7f50958b4bea2f09b8f8f13c.json  query-58dde6b5978126f35be440fb3014d3cd5eb37ec8752e1d25f03c2e0fd2137b65.json  query-5a7cdcb6e0fac01bc57d7b5db9b3becd270e05bf02cd648bf59e154bc001385b.json  query-66aa0be65f54dc47f717fab1660a70a384ebb7b248f72d81aec10bdc7d84b0e3.json  query-66eed6a12a1a8708440c6c7d167b2f2aac90847c25ff01715d2f4f4dfc92ec08.json  query-68fc9846f81971e2cfe835d10ee7d5771d36814311970f91e5c02b0f2848d039.json  query-6f54a63122c4bff2312b65a25b3eb75c15cb2d1a4dac7467514a64de0f71fe69.json  query-6f6284e384fdf6227775e30b4cbfbfb3e3b77d7506cd0983175bc3e7643858ba.json  query-724e8c2c26b4ea0fb53d5979c7ed52928564cbc884ef651bb83efa211adbc7d0.json  query-7678e96c625843946ee2e6d89873ed5f2782b568d8d4973713f301a4f195ba71.json  query-7a36e5ee0c61cb2518f22619b01f185894a64dd967dfa5e7a3657a77defb32b6.json  query-7fa29ecbddd341df17a4d7143a66c75abc5015a0ba1e598016ee29a19b0925c5.json  query-814c2595b67b0b8a008f945c59a883d14c3ba08ae85ad8e806e3416d601f37d4.json  query-8275940e20486370411de77f8ecff498e71e091223561bff1d03e99c156b9032.json  query-886b514058ac5d2bd1caea2a21ef9d74ff8b606608d8690f5b792b6f52ed1596.json  query-89230da93b8642825215b4642705ceae0baf60e4d3ec300de7e573a2706c0da5.json  query-8a93b0bf2ef8807e8e0d335578301f61eae197234f9c3fbea755f34ac18e3903.json  query-8bf937e884947ff6ad3c5162f716e5f46bb7c817f258c386fe4faa7b349129ce.json  query-8c479240384a12a2dad837691a9fe5c5e5f550e120a0bfd1c1eb9dafa9ebd05e.json  (+28 more)
rust/crates/billing-core/: Cargo.toml
rust/crates/billing-core/src/: schemas.rs
rust/crates/compute-core/: Cargo.toml
rust/crates/compute-core/src/: cache_keys.rs  channel_names.rs  configs.rs  determiners.rs  event.rs  formatters.rs  helpers.rs  implementations.rs  lib.rs  models.rs  repository.rs  schemas.rs
rust/crates/factory/: Cargo.toml
rust/crates/http-common/: Cargo.toml
rust/crates/http-common/src/: handlers.rs  lib.rs  router.rs
rust/crates/http-contracts/: Cargo.toml
rust/crates/http-contracts/src/: lib.rs
rust/crates/users-core/: Cargo.toml
rust/crates/users-core/src/: error.rs  implementation.rs  jwt.rs
rust/crates/utility/: Cargo.toml
rust/crates/utility/src/: get_config_value.rs  get_config_value_fromstr.rs  get_optional_config_value.rs  get_optional_config_value_fromstr.rs  lib.rs  parse_value.rs
rust/migrations/: 20251125055702_initial.sql  README.md
rust/services/: README.md
rust/services/billing-api/: Cargo.toml
rust/services/billing-api/src/: app.rs  config.rs  error.rs  error_implementations.rs  implementations.rs  main.rs
rust/services/compute-api/: Cargo.toml
rust/services/compute-api/src/: app.rs  config.rs  error.rs  implementations.rs  main.rs
rust/services/compute-metrics-worker/: Cargo.toml
rust/services/compute-metrics-worker/src/: app.rs  config.rs  error.rs  implementations.rs  main.rs
rust/services/compute-provisioner/: Cargo.toml  config.schema.json
rust/services/compute-provisioner/src/: app.rs  config.rs  error.rs  implementations.rs  main.rs  server.c  settings.rs
rust/services/compute-reconciler/: Cargo.toml
rust/services/compute-syncer/: Cargo.toml
rust/services/users-api/: Cargo.toml
services/billing-api/: Cargo.toml
services/billing-api/src/: main.rs
services/compute-api/: Cargo.toml
services/compute-api/src/: config.rs  main.rs
services/compute-provisioner/: Cargo.toml
services/compute-provisioner/src/: main.rs
services/users-api/: Cargo.toml  Dockerfile
services/users-api/src/: app.rs  claims_extractor.rs  config.rs  error.rs  implementation.rs  main.rs
shared/: Cargo.toml
shared/src/: implementations.rs  lib.rs  models.rs  schemas.rs
shared/src/services/: amqp.rs  kubernetes.rs  mod.rs  redis.rs  tonic.rs  zepto.rs
shared/src/utilities/: cache_keys.rs  channel_names.rs  config.rs  errors.rs  instrumentation.rs  load_service_env.rs  mod.rs  observability.rs
tenants/bookshop/: Dockerfile  README.md  main.py  pyproject.toml
(+494 files in other folders)
