[workspace]
members = [
    "shared",
    "services/users-api",
    "services/compute-api",
    "services/billing-api",
    "services/compute-watcher",
    # "services/compute-informer",
    "services/compute-provisioner",
    "services/compute-syncer",
]

resolver = "2"

[workspace.dependencies]
rustls = { version = "0.23.32", features = ["std", "log", "logging", "ring"] }
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = [
    "async-read-body",
    "cookie",
    "cookie-private",
    "cookie-signed",
    "multipart",
    "query",
    "scheme",
    "typed-header",
    "typed-routing",
] }
chrono = { version = "0.4.42", features = ["serde"] }
lapin = "3.6.0"
rand = "0.9.2"
redis = { version = "0.32.5", features = [
    "r2d2",
    "tokio-comp",
    "tokio-rustls-comp",
    "tls-rustls-insecure",
    "tokio-native-tls-comp",
    "uuid",
] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "bigdecimal",
    "chrono",
    "derive",
    "macros",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "tls-rustls",
    "uuid",
] }
sqlx-core = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "local-time",
    "std",
    "time",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.3"
url = { version = "2.5.7", features = ["serde"] }
cookie = "0.18.1"
infer = "0.19.0"
base64 = "0.22.1"
either = "1.15.0"
time = { version = "0.3.44", features = ["formatting", "macros"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
bytes = { version = "1.10.1", features = ["serde"] }
serde_with = "3.15.0"
qdrant-client = { version = "1.15.0", features = ["uuid"] }
tonic = { version = "0.14.2", features = ["_tls-any", "tls-ring", "transport"] }
rdkafka = "0.38.0"
futures = "0.3.31"
dotenvy = "0.15.7"
regex = "1.11.2"
