[workspace]
members = [
    "services/users-api",
    "services/billing-api",
    "services/billing-worker",
    "services/compute-api",
    "services/compute-provisioner",
    "services/compute-syncer",
    "services/ai-orchestrator",
    "crates/factory",
    "crates/utility",
    "crates/users-core",
    "crates/http-contracts",
    "crates/compute-core",
]

resolver = "2"

# [features]
# default = []
# postgres = ["sqlx"]
# redis = ["redis"]
# k8s = ["kube", "kube-client", "k8s-openapi"]
# vault = ["vaultrs", "vaultrs-login"]

[workspace.dependencies]
rustls = { version = "0.23.32", features = ["std", "log", "logging", "ring"] }
anyhow = "1.0.100"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = [
    "async-read-body",
    "cookie",
    "cookie-private",
    "cookie-signed",
    "multipart",
    "query",
    "scheme",
    "typed-header",
    "typed-routing",
] }
chrono = { version = "0.4.42", features = ["serde"] }
lapin = "3.6.0"
rand = "0.9.2"
redis = { version = "0.32.5", features = [
    "r2d2",
    "tokio-comp",
    "tokio-rustls-comp",
    "tls-rustls-insecure",
    "tokio-native-tls-comp",
    "uuid",
    "json",
] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
sqlx = { version = "0.8.6", features = [
    "bigdecimal",
    "chrono",
    "derive",
    "macros",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "tls-rustls",
    "uuid",
] }
sqlx-core = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.3"
url = { version = "2.5.7", features = ["serde"] }
cookie = "0.18.1"
infer = "0.19.0"
base64 = "0.22.1"
either = "1.15.0"
time = { version = "0.3.44", features = ["formatting", "macros"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
bytes = { version = "1.10.1", features = ["serde"] }
serde_with = "3.15.0"
qdrant-client = { version = "1.15.0", features = ["uuid"] }
tonic = { version = "0.14.2", features = ["_tls-any", "tls-ring", "transport"] }
rdkafka = "0.38.0"
futures = "0.3.31"
dotenvy = "0.15.7"
regex = "1.11.2"
kube-client = "2.0.1"
kube = { version = "2.0.1", features = [
    "runtime",
    "derive",
    "ring",
    "rustls-tls",
    "kube-runtime",
    "config",
    "client",
    "kube-client",
] }
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
schemars = { version = "1" }
vaultrs = "0.7.4"
vaultrs-login = "0.2.3"
prometheus-client = "0.24.0"
redis-macros = "0.5"
urlencoding = "2.1.3"
async-stream = "0.3.6"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
kcr_cert_manager_io = "2.20250927.142100"
kcr_traefik_io = "2.20251105.44842"
kcr_secrets_hashicorp_com = "2.20250929.104855"
k8s-crds-cert-manager = "1.19.1"
k8s-crds-traefik = "3.6.0"
# observability
# Core OpenTelemetry APIs and SDK
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "logs"] }
# OTLP exporter for sending data to collectors
opentelemetry-otlp = { version = "0.31.0", features = [
    "tonic",
    "grpc-tonic",
    "gzip-tonic",
    "tls-roots",
] }
# Semantic conventions for consistent attribute naming
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
] }
# The tracing ecosystem for instrumentation
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "json",
    "local-time",
    "std",
    "time",
] }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = "0.32.0"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
config = { version = "0.15.19", features = ["async", "json"] }
