[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls.workspace = true
tokio.workspace = true
axum.workspace = true
axum-core.workspace = true
axum-extra.workspace = true
chrono.workspace = true
lapin.workspace = true
rand.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sqlx-core.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
validator.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
reqwest.workspace = true
tonic.workspace = true
rdkafka.workspace = true
kube-client.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
vaultrs.workspace = true
vaultrs-login.workspace = true
futures.workspace = true
dotenvy.workspace = true
regex.workspace = true
redis-macros.workspace = true
bcrypt = "0.17.1"
url = { version = "2.5.7", features = ["serde"] }
thiserror = "2.0.16"
jsonwebtoken = "9.3.1"
object_store = { version = "0.12.4", features = ["gcp", "aws"] }
oauth2 = "5.0.0"
prometheus-http-query = "0.8.3"
once_cell = "1.21.3"
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
