[package]
name = "billing"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../shared" }
rustls.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
dotenvy.workspace = true
time.workspace = true
bigdecimal.workspace = true
