[package]
name = "compute"
version = "0.1.0"
edition = "2024"


[dependencies]
shared = { path = "../../shared" }
rustls.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
dotenvy.workspace = true
time.workspace = true
bigdecimal.workspace = true
regex.workspace = true
kube-client.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
aes-gcm = "0.10.3"
once_cell = "1.21.3"
base64 = "0.22.1"
futures.workspace = true
tokio-stream = "0.1.17"
