[package]
name = "compute-api"
version = "0.1.0"
edition = "2024"


[dependencies]
shared = { path = "../../shared" }
utility = { path = "../../crates/utility" }
rustls.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true
validator.workspace = true
dotenvy.workspace = true
time.workspace = true
bigdecimal.workspace = true
redis.workspace = true
lapin.workspace = true
regex.workspace = true
kube-client.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
futures.workspace = true
redis-macros.workspace = true
async-stream.workspace = true
tokio-stream = "0.1.17"
once_cell = "1.21.3"

opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
