[package]
name = "compute-deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../shared" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
futures.workspace = true
kube-client.workspace = true
kube.workspace = true
schemars.workspace = true
