[package]
name = "users-api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../shared" }
rustls.workspace = true
tokio.workspace = true
axum.workspace = true
axum-core.workspace = true
axum-extra.workspace = true
chrono.workspace = true
lapin.workspace = true
rand.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sqlx-core.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
time.workspace = true
bcrypt = "0.17.1"
cookie = "0.18.1"
infer = "0.19.0"
oauth2 = "5.0.0"
object_store = { version = "0.12.4", features = ["gcp", "aws"] }
