[package]
name = "compute-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
chrono.workspace = true
once_cell.workspace = true
redis.workspace = true
redis-derive.workspace = true
regex.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
uuid.workspace = true
validator.workspace = true
bigdecimal.workspace = true
ghrepo.workspace = true
