[package]
name = "billing-api"
version = "0.1.0"
edition = "2024"

[dependencies]
factory = { path = "../../crates/factory" }
utility = { path = "../../crates/utility" }
http-contracts = { path = "../../crates/http-contracts" }
users-core = { path = "../../crates/users-core" }
http-common = { path = "../../crates/http-common" }
anyhow.workspace = true
thiserror.workspace = true
rustls.workspace = true
axum.workspace = true
axum-core.workspace = true
axum-extra.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
dotenvy.workspace = true
time.workspace = true
bigdecimal.workspace = true
lapin.workspace = true
redis.workspace = true
config.workspace = true
