[package]
name = "compute-api"
version = "0.1.0"
edition = "2024"


[dependencies]
factory = { path = "../../crates/factory" }
utility = { path = "../../crates/utility" }
users-core = { path = "../../crates/users-core" }
http-contracts = { path = "../../crates/http-contracts" }
compute-core = { path = "../../crates/compute-core" }
thiserror.workspace = true
anyhow.workspace = true
rustls.workspace = true
tokio.workspace = true
futures.workspace = true
axum.workspace = true
axum-core.workspace = true
axum-extra.workspace = true
redis.workspace = true
chrono.workspace = true
lapin.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
validator.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
time.workspace = true
infer = "0.19.0"
tokio-stream = "0.1.17"

#anyhow.workspace = true
#thiserror.workspace = true
#rustls.workspace = true
#axum.workspace = true
#chrono.workspace = true
#reqwest.workspace = true
#serde.workspace = true
#serde_json.workspace = true
#sqlx.workspace = true
#tokio.workspace = true
#tower-http.workspace = true
#uuid.workspace = true
#validator.workspace = true
#dotenvy.workspace = true
#time.workspace = true
#bigdecimal.workspace = true
#redis.workspace = true
#lapin.workspace = true
#regex.workspace = true
#kube-client.workspace = true
#kube.workspace = true
#k8s-openapi.workspace = true
#schemars.workspace = true
#futures.workspace = true
#redis-macros.workspace = true
#async-stream.workspace = true
#tokio-stream = "0.1.17"
#once_cell = "1.21.3"
#
#opentelemetry_sdk.workspace = true
#opentelemetry-otlp.workspace = true
#tracing-opentelemetry.workspace = true
#tracing.workspace = true
#tracing-subscriber.workspace = true
