[package]
name = "compute-metrics-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
factory = { path = "../../crates/factory" }
utility = { path = "../../crates/utility" }
compute-core = { path = "../../crates/compute-core" }
prometheus-client = "0.24.0"
thiserror.workspace = true
anyhow.workspace = true
rustls.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
dotenvy.workspace = true
redis.workspace = true
reqwest.workspace = true
tracing.workspace = true
config.workspace = true
