[package]
name = "compute-metrics-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
factory = { path = "../../crates/factory" }
utility = { path = "../../crates/utility" }
http-common = { path = "../../crates/http-common" }
compute-core = { path = "../../crates/compute-core" }
prometheus-http-query = "0.8.3"
thiserror.workspace = true
anyhow.workspace = true
rustls.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
redis.workspace = true
reqwest.workspace = true
tracing.workspace = true
config.workspace = true
chrono.workspace = true
uuid.workspace = true
