[package]
name = "compute-provisioner"
version = "0.1.0"
edition = "2024"

[dependencies]
factory = { path = "../../crates/factory" }
utility = { path = "../../crates/utility" }
compute-core = { path = "../../crates/compute-core" }
http-common = { path = "../../crates/http-common" }
thiserror.workspace = true
anyhow.workspace = true
rustls.workspace = true
axum.workspace = true
axum-core.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
lapin.workspace = true
tokio.workspace = true
tower-http.workspace = true
dotenvy.workspace = true
time.workspace = true
uuid.workspace = true
futures.workspace = true
kube-client.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
vaultrs.workspace = true
vaultrs-login.workspace = true
prometheus-client.workspace = true
tracing.workspace = true
config.workspace = true
tracing-opentelemetry.workspace = true
base64 = "0.22.1"
sha256 = "1.6.0"
ghrepo.workspace = true
kcr_cert_manager_io = "3.20260117.142700"
kcr_traefik_io = "3.20260128.50253"
kcr_secrets_hashicorp_com = "3.20260119.105833"
kcr_kpack_io = "3.20260113.154802"
k8s-crds-cert-manager = "1.19.1"
k8s-crds-traefik = "3.6.0"
