[package]
name = "users-api"
version = "0.1.0"
edition = "2024"

[dependencies]
factory = { path = "../../crates/factory" }
utility = { path = "../../crates/utility" }
http-contracts = { path = "../../crates/http-contracts" }
http-common = { path = "../../crates/http-common" }
users-core = { path = "../../crates/users-core" }
thiserror.workspace = true
anyhow.workspace = true
rustls.workspace = true
tokio.workspace = true
axum.workspace = true
axum-core.workspace = true
axum-extra.workspace = true
redis.workspace = true
chrono.workspace = true
lapin.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
validator.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
time.workspace = true
bcrypt = "0.17.1"
cookie = "0.18.1"
infer = "0.19.0"
oauth2 = "5.0.0"
object_store = { version = "0.12.4", features = ["gcp", "aws"] }
jsonwebtoken.workspace = true
config.workspace = true
async-stream = "0.3.6"
